# Slink

./: .gitignore  .prettierrc  Cargo.toml  README.md  Rocket.toml  codegen.sh  run.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json  docker-compose.yml
scripts/: postcreate.sh  precreate.sh
slink-common/: Cargo.toml
slink-common/src/: constants.rs  error.rs  lib.rs
slink-common/src/runners/minecraft/: base.rs  docker_host.rs  mod.rs
slink-server/: Cargo.toml
slink_client/: eslint.config.js  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
slink_client/src/: App.tsx  index.css  main.tsx
slink_client/src/components/contexts/api/: Provider.tsx  index.ts  types.ts
slink_client/src/lang/: en.json
slink_client/src/lib/api/: client.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
slink_client/src/styles/: index.scss  layout.scss
slink_client/src/types/bindings/: LoginModel.ts  RedactedUser.ts  Session.ts  TSLink.ts
slink_client/src/util/: localization.tsx  routes.tsx  theme.ts
slink_client/src/util/theme/: cssVariableResolver.ts  theme.ts
slink_client/src/views/authentication/: AuthView.tsx
slink_client/src/views/dashboard/: DashboardView.tsx
slink_client/src/views/layout/: Layout.tsx
slink_common/: Cargo.toml
slink_common/src/: constants.rs  error.rs  lib.rs
slink_common/src/providers/: error.rs  fabric_server.rs  mod.rs  server_binary.rs
slink_common/src/providers/server_binary/: fabric_server.rs  mod.rs  server_binary.rs  vanilla_server.rs
slink_common/src/providers/server_binary/fabric/: mod.rs  server.rs  version.rs
slink_common/src/runners/: mod.rs
slink_common/src/runners/minecraft/: base.rs  docker_host.rs  mod.rs
slink_common/src/types/: config.rs  minecraft.rs  mod.rs  networking.rs  server.rs  versioning.rs
slink_common/src/utilities/: caching.rs  datapath.rs  mod.rs
slink_macros/: Cargo.toml
slink_macros/src/: cache.rs  lib.rs
slink_server/: Cargo.toml
slink_server/src/: main.rs
slink_server/src/controllers/: authentication.rs  mod.rs
slink_server/src/controllers/providers/: minecraft_version.rs  mod.rs  server_binary.rs
slink_server/src/controllers/servers/: global.rs
slink_server/src/models/: auth.rs  minecraft_server.rs  mod.rs
slink_server/src/util/: database.rs  fairings.rs  mod.rs  security.rs  types.rs
