[package]
name = "slink_common"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bollard = { version = "0.18.1", features = ["chrono", "json_data_content"] }
bytes = { version = "1.10.1", features = ["serde"] }
bytesize = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
manor = "0.2.3"
mongodb = "3.2.3"
rocket = { version = "0.5.1", features = ["json", "secrets", "tls", "uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
strfmt = "0.2.4"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde"] }
