[package]
name = "slink_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
bytesize = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
slink_common = {path = "../slink_common"}
futures = "0.3.31"
rocket = { version = "0.5.1", features = ["json", "secrets", "tls", "uuid"] }
rocket_ws = "0.1.1"
fern = { version = "0.7.1", features = ["chrono", "colored"] }
log = { version = "0.4.26", features = ["kv_serde", "std"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
serde_json = "1.0.140"
toml = "0.8.20"
manor = "0.2.5"
mongodb = "3.2.3"
orion = { version = "0.17.9", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
bson = { version = "2.14.0", features = ["chrono", "uuid-1", "serde_with-3"] }
rocket_okapi = {version = "0.9.0", features = ["preserve_order", "rapidoc", "uuid", "secrets", "rocket_ws"]}
okapi = {version = "0.7.0", features = ["impl_json_schema", "preserve_order"]}
schemars = {version = "0.8.22", features = ["preserve_order", "uuid1", "chrono", "bytes"]}
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde"] }
openssl = { version = "0.10.71", features = ["vendored"] }

